fix bug with scrollbar revealing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,7 +14,6 @@ body {
   transition: $transition-background-color;
 }
 
-
 .switch-container {
   position: absolute;
 }
@@ -178,15 +177,21 @@ input:checked + .slider:before {
   }
 }
 
+.reveal-scrollbar {
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ccc;
+  }
+}
 .segment-container {
   margin-top: 20px;
   &::-webkit-scrollbar {
-    background-color: #fff;
     border-radius: 10px;
-    width: 7px; 
   }
   &::-webkit-scrollbar-track {
-    background-color: #ccc;
     border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb {
